# DistMeshPy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
distmeshpy/: __init__.py  _typing.py  internal.py  triangle_utils.py
distmeshpy/core/: __init__.py  internal.py  tetrahedron_utils.py  triangle_utils.py
distmeshpy/core/src/: tetrahedron_utils.hpp
distmeshpy/mesh/: __init__.py  distmesh2d.py  distmesh3d.py  distmeshsurface.py
distmeshpy/src/: triangle_utils.cpp
distmeshpy/utils/: config.py  distance_functions.py  size_distribution_functions.py
examples/2d_examples/: airfoil.py  ellipse.py  hollow_rectangle.py  unit_circle.py
examples/3d_examples/: unit_sphere.py
examples/surface_examples/: egg.py  ellipsoid.py  graded_sphere.py  torus.py
pydistmesh/: __init__.py  internal.py  tetrahedron_utils.py  triangle_utils.py
pydistmesh/mesh/: __init__.py  distmesh2d.py  distmesh3d.py  distmeshsurface.py
pydistmesh/src/: helpers.hpp  internal.cpp  internal.hpp  tetrahedron_utils.cpp  triangle_utils.hpp
pydistmesh/utils/: __init__.py  config.py  distance_functions.py  size_distribution_functions.py
